# qtquick1

./: .gitignore  .qmake.conf  qtquick1.pro  sync.profile
demos/: demos.pro
demos/declarative/: declarative.pro
demos/declarative/calculator/: main.cpp
demos/declarative/flickr/: main.cpp
demos/declarative/minehunt/: main.cpp  minehunt.cpp  minehunt.h  minehunt.pro
demos/declarative/photoviewer/: main.cpp
demos/declarative/rssnews/: main.cpp
demos/declarative/samegame/: main.cpp
demos/declarative/snake/: main.cpp
demos/declarative/twitter/: main.cpp
examples/: examples.pro
examples/declarative/: declarative.pro
examples/demos/: demos.pro
examples/helper/: deployment.pri  helper.pro
mkspecs/features/: quick1_debug.prf
modules/: qt_quick1.pri
src/: src.pro
src/declarative/: declarative.pro  qtdeclarativeglobal.h  qtdeclarativeglobal_p.h  qtquick1global.h  qtquick1global_p.h
src/doc/: qtdeclarative.qdocconf
src/imports/: builtins.pro  builtins.qmltypes  imports.pro  qimportbase.pri
src/plugins/: plugins.pro  qpluginbase.pri
tests/auto/: auto.pro
tests/auto/cmake/test_modules/: CMakeLists.txt  main.cpp
tools/: tools.pro
tools/qml/: deviceorientation.cpp  deviceorientation.h  deviceorientation_harmattan.cpp  deviceorientation_maemo5.cpp  deviceorientation_symbian.cpp  loggerwidget.cpp  loggerwidget.h  main.cpp  proxysettings.cpp  proxysettings.h  qdeclarativetester.cpp  qdeclarativetester.h  qml.pri  qml.pro  qmlruntime.cpp  qmlruntime.h  texteditautoresizer_maemo5.h
tools/qmlplugindump/: main.cpp  qmlplugindump.pro
(+1680 files in other folders)
